Evaluation Results/AProVE/slice+cncrt/FSE/loop/Type_Conversion_in_Assignment_1_T/Type_Conversion_in_Assignment_1_T_Loop26_TestCase8.txt
MAYBE
proof of /FILES_DIR/concretizer/Type_Conversion_in_Assignment_1_T_Loop26_TestCase8.c
# AProVE Commit ID: 48c83ccb80d5f8312cb92f4aa1b51dc35e247e65 nils 20241118 unpublished


Termination of the given C Problem could not be shown:

(0) C Problem


----------------------------------------

(0)
Obligation:
c file /FILES_DIR/concretizer/Type_Conversion_in_Assignment_1_T_Loop26_TestCase8.c/FILES_DIR/concretizer/Type_Conversion_in_Assignment_1_T_Loop26_TestCase8.c:21:1: warning: return type of 'main' is not 'int' [-Wmain-return-type]
void main(void)
^
/FILES_DIR/concretizer/Type_Conversion_in_Assignment_1_T_Loop26_TestCase8.c:21:1: note: change return type to 'int'
void main(void)
^~~~
int
/FILES_DIR/concretizer/Type_Conversion_in_Assignment_1_T_Loop26_TestCase8.c:44:15: error: label at end of compound statement: expected statement
      default: 
              ^
Runtime: 2374 milliseconds
